[gd_scene load_steps=9 format=3 uid="uid://dmaj8kvbp8qc8"]

[ext_resource type="Texture2D" uid="uid://ck5o4pmwoywo8" path="res://img/porte ac glad.png" id="1_i6gyr"]
[ext_resource type="Script" path="res://porte_arene.gd" id="1_xfaj5"]
[ext_resource type="Texture2D" uid="uid://bgp7023k0tpsj" path="res://img/bouton flèche droite.png" id="2_5bllo"]
[ext_resource type="Texture2D" uid="uid://co453qel170io" path="res://img/img_salle_coffres/boutons/écusson.png" id="4_csbn6"]
[ext_resource type="Texture2D" uid="uid://c5lrqt40bpkm4" path="res://img/parchemin.png" id="5_rhe8t"]
[ext_resource type="Texture2D" uid="uid://cvh5ef80kn20e" path="res://img/crypto-cesar/message chiffré.png" id="6_2tl2w"]
[ext_resource type="Texture2D" uid="uid://buqi6ghixko0h" path="res://img/crypto-cesar/message déchiffré.png" id="7_6kjky"]
[ext_resource type="Script" path="res://message_chiffre.gd" id="7_p3npj"]

[node name="porte_arene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xfaj5")

[node name="porte_arene_background" type="Sprite2D" parent="."]
position = Vector2(578, 326)
texture = ExtResource("1_i6gyr")

[node name="fleche_button" type="Button" parent="."]
layout_mode = 0
offset_left = 976.0
offset_top = 246.0
offset_right = 2064.0
offset_bottom = 1334.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("2_5bllo")

[node name="porte_button" type="Button" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 246.0
offset_right = 986.0
offset_bottom = 746.0
scale = Vector2(0.3, 0.3)
icon = ExtResource("4_csbn6")

[node name="message_button" type="Button" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 221.0
offset_right = 1986.0
offset_bottom = 2229.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("5_rhe8t")

[node name="message_chiffre" type="Sprite2D" parent="message_button"]
position = Vector2(920, 1060)
scale = Vector2(10, 9.96914)
texture = ExtResource("6_2tl2w")
script = ExtResource("7_p3npj")

[node name="l4_mot1" type="LineEdit" parent="message_button/message_chiffre"]
offset_left = 81.0001
offset_top = -69.2136
offset_right = 238.0
offset_bottom = -19.2136
theme_override_font_sizes/font_size = 30

[node name="l4_mot2" type="LineEdit" parent="message_button/message_chiffre"]
offset_left = 248.0
offset_top = -69.0
offset_right = 368.0
offset_bottom = -19.0
theme_override_font_sizes/font_size = 30

[node name="l4_mot3" type="LineEdit" parent="message_button/message_chiffre"]
offset_left = 379.0
offset_top = -69.2136
offset_right = 536.0
offset_bottom = -19.2136
theme_override_font_sizes/font_size = 30

[node name="l8_mot1" type="LineEdit" parent="message_button/message_chiffre"]
offset_left = 81.0
offset_top = 83.0
offset_right = 238.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 30

[node name="l8_mot2" type="LineEdit" parent="message_button/message_chiffre"]
offset_left = 248.0
offset_top = 83.0
offset_right = 379.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 30

[node name="l8_mot3" type="LineEdit" parent="message_button/message_chiffre"]
offset_left = 390.0
offset_top = 83.0
offset_right = 510.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 30

[node name="l8_mot4" type="LineEdit" parent="message_button/message_chiffre"]
offset_left = 81.0
offset_top = 146.988
offset_right = 201.0
offset_bottom = 196.988
theme_override_font_sizes/font_size = 30

[node name="commentaire" type="Label" parent="message_button/message_chiffre"]
offset_left = 98.0001
offset_top = 18.0557
offset_right = 496.0
offset_bottom = 49.0557
theme_override_colors/font_color = Color(0.556863, 0.258824, 0.227451, 1)
theme_override_font_sizes/font_size = 22
text = "Clique sur 'Entrer' pour valider le mot"

[node name="message_dechiffre" type="Sprite2D" parent="message_button"]
visible = false
position = Vector2(910, 1060)
scale = Vector2(10.0174, 9.96914)
texture = ExtResource("7_6kjky")

[node name="porte_button" type="Button" parent="message_button/message_dechiffre"]
offset_left = 422.267
offset_top = 166.514
offset_right = 930.267
offset_bottom = 674.514
scale = Vector2(0.3, 0.3)
icon = ExtResource("4_csbn6")

[connection signal="pressed" from="fleche_button" to="." method="_on_fleche_button_pressed"]
[connection signal="pressed" from="porte_button" to="." method="_on_porte_button_pressed"]
[connection signal="pressed" from="message_button" to="." method="_on_message_button_pressed"]
[connection signal="all_mots_faits" from="message_button/message_chiffre" to="." method="_on_message_chiffre_all_mots_faits"]
[connection signal="sortie_message" from="message_button/message_chiffre" to="." method="_on_message_chiffre_sortie_message"]
[connection signal="text_changed" from="message_button/message_chiffre/l4_mot1" to="message_button/message_chiffre" method="_on_l_4_mot_1_text_changed"]
[connection signal="text_submitted" from="message_button/message_chiffre/l4_mot1" to="message_button/message_chiffre" method="_on_l_4_mot_1_text_submitted"]
[connection signal="text_changed" from="message_button/message_chiffre/l4_mot2" to="message_button/message_chiffre" method="_on_l_4_mot_2_text_changed"]
[connection signal="text_submitted" from="message_button/message_chiffre/l4_mot2" to="message_button/message_chiffre" method="_on_l_4_mot_2_text_submitted"]
[connection signal="text_changed" from="message_button/message_chiffre/l4_mot3" to="message_button/message_chiffre" method="_on_l_4_mot_3_text_changed"]
[connection signal="text_submitted" from="message_button/message_chiffre/l4_mot3" to="message_button/message_chiffre" method="_on_l_4_mot_3_text_submitted"]
[connection signal="text_changed" from="message_button/message_chiffre/l8_mot1" to="message_button/message_chiffre" method="_on_l_8_mot_1_text_changed"]
[connection signal="text_submitted" from="message_button/message_chiffre/l8_mot1" to="message_button/message_chiffre" method="_on_l_8_mot_1_text_submitted"]
[connection signal="text_changed" from="message_button/message_chiffre/l8_mot2" to="message_button/message_chiffre" method="_on_l_8_mot_2_text_changed"]
[connection signal="text_submitted" from="message_button/message_chiffre/l8_mot2" to="message_button/message_chiffre" method="_on_l_8_mot_2_text_submitted"]
[connection signal="text_changed" from="message_button/message_chiffre/l8_mot3" to="message_button/message_chiffre" method="_on_l_8_mot_3_text_changed"]
[connection signal="text_submitted" from="message_button/message_chiffre/l8_mot3" to="message_button/message_chiffre" method="_on_l_8_mot_3_text_submitted"]
[connection signal="text_changed" from="message_button/message_chiffre/l8_mot4" to="message_button/message_chiffre" method="_on_l_8_mot_4_text_changed"]
[connection signal="text_submitted" from="message_button/message_chiffre/l8_mot4" to="message_button/message_chiffre" method="_on_l_8_mot_4_text_submitted"]
[connection signal="pressed" from="message_button/message_dechiffre/porte_button" to="message_button/message_chiffre" method="_on_porte_button_pressed"]
